plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = "Shop"
version = "1.0-SNAPSHOT"

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' } //아임포트설정
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-parameters" // 모든 파라미터 이름 반영
}

dependencies {
    // starter DEPENDENCY
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web' // 톰캣 (웹서버)

    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    // jsonwebtoken jjwt - 0.12.3
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.3'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.3'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.3'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.76'

    // Hibernate6JakartaModule DEPENDENCY
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate6:2.16.1'
    implementation 'org.hibernate:hibernate-core:6.4.4.Final'

    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.springframework.boot:spring-boot-devtools'

    // Java Mail Sender module
    implementation 'org.springframework:spring-context:6.1.5'
    implementation 'org.springframework:spring-context-support:6.1.5'
    implementation 'com.sun.mail:jakarta.mail:2.0.1'

    compileOnly 'org.projectlombok:lombok'

//	runtimeOnly 'com.h2database:h2'
    runtimeOnly 'mysql:mysql-connector-java:8.0.33' //mysql

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    // TEST DEPENDENCY
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    // JUnit4 추가
    testImplementation("org.junit.vintage:junit-vintage-engine") {
        exclude group: "org.hamcrest", module: "hamcrest-core"
    }
    implementation 'com.github.iamport:iamport-rest-client-java:0.2.21' // 아임포트 설정
    implementation 'org.modelmapper:modelmapper:2.4.1' // modelmapper
    implementation 'io.github.cdimascio:dotenv-java:3.0.0' // env 파일

    implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
    implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final'

    // querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

}

test{
    useJUnitPlatform()
    jvmArgs '-Xshare:off'
}

clean {
    delete file('src/main/generated')
}